--- a/www/jakarta-tomcat5/files/pkg-install.in
+++ b/www/jakarta-tomcat5/files/pkg-install.in
@@ -3,7 +3,7 @@
 # Checks if the 'www' user and group exist. If they don't, then
 # an attempt is made to create both.
 #
-# $FreeBSD$
+# $FreeBSD: ports/www/jakarta-tomcat5/pkg-install,v 1.1 2003/08/13 11:39:38 znerd Exp $
 #
 
 # Make sure we're called during the 'make install' process
@@ -12,10 +12,10 @@ if [ "$2" != "PRE-INSTALL" ]; then
 fi
 
 # Set some constants
-USER=www
-GROUP=${USER}
 UID=80
 GID=${UID}
+USER=%%USER%%
+GROUP=%%GROUP%%
 
 # See if the group already exists
 if ! pw groupshow "${GROUP}" 2>/dev/null 1>&2; then
