--- a/www/tomcat41/files/pkg-deinstall.in
+++ b/www/tomcat41/files/pkg-deinstall.in
@@ -8,14 +8,16 @@
 # * Checks if the '%%USER%%' user exists. If it does, then it displays
 #   a message.
 #
-# $FreeBSD: ports/www/jakarta-tomcat55/pkg-deinstall,v 1.2 2004/01/02 12:31:11 znerd Exp $
+# $FreeBSD: ports/www/jakarta-tomcat41/pkg-deinstall,v 1.5 2004/01/02 12:31:10 znerd Exp $
 #
+
+USER=%%USER%%
+PID_FILE=%%PID_FILE%%
 
 # Make sure we're in the right stage of the process
 if [ "$2" = "DEINSTALL" ]; then
 
 	# Kill the process if it is still running
-	PID_FILE=/var/run/tomcat5
 	if [ -s ${PID_FILE} ]; then
 		PID=`cat ${PID_FILE}`
 		echo -n ">> Killing Jakarta Tomcat process (${PID})..."
@@ -37,8 +39,8 @@ fi
 
 if [ "$2" = "POST-DEINSTALL" ]; then
 	# If the user exists, then display a message
-	if pw usershow "%%USER%%" 2>/dev/null 1>&2; then
-		echo "To delete the %%USER%% user permanently, use 'pw userdel %%USER%%'"
+	if pw usershow "${USER}" 2>/dev/null 1>&2; then
+		echo "To delete the ${USER} user permanently, use 'pw userdel ${USER}'"
 	fi
 fi
 
