--- a/www/frontpage/files/frontpage.sh.in
+++ b/www/frontpage/files/frontpage.sh.in
@@ -1,10 +1,10 @@
 #!/bin/sh
 #
-# $FreeBSD: ports/www/frontpage/files/frontpage.sh.in,v 1.1 2005/02/09 20:11:11 pav Exp $
+# $FreeBSD: ports/www/frontpage/files/frontpage.sh.in,v 1.2 2005/09/04 23:08:16 pav Exp $
 
 # PROVIDE: frontpage
 # REQUIRE: DAEMON
-# BEFORE: apache
+# BEFORE: apache apache20 apache21 apache22
 # KEYWORD: FreeBSD
 
 # Define the following frontpage_* variables in one of the following:
