--- a/japanese/acroread/files/acroread.in
+++ b/japanese/acroread/files/acroread.in
@@ -1,4 +1,5 @@
 #!%%LINUXBASE%%/bin/sh
-# $FreeBSD: ports/japanese/acroread/files/acroread.in,v 1.1 2005/06/05 07:40:33 hrs Exp $
+# $FreeBSD: ports/japanese/acroread/files/acroread.in,v 1.2 2006/02/11 01:58:19 hrs Exp $
 : ${GTK_IM_MODULE:=xim}; export GTK_IM_MODULE
+UNAME_s=Linux; export UNAME_s
 exec %%INSTALLDIR%%/bin/acroread "$@"
