--- a/mail/postfix1/files/postfix.sh.in
+++ b/mail/postfix1/files/postfix.sh.in
@@ -1,6 +1,6 @@
 #!/bin/sh
 #
-# $FreeBSD: ports/mail/postfix1/files/postfix.sh.in,v 1.2 2006/01/12 20:38:27 mnag Exp $
+# $FreeBSD: ports/mail/postfix1/files/postfix.sh.in,v 1.3 2006/01/16 21:48:36 mnag Exp $
 #
 # PROVIDE: postfix
 # REQUIRE: %%REQUIRE%%
@@ -19,13 +19,7 @@
 . %%RC_SUBR%%
 
 name="postfix"
-rcvar=`set_rcvar`
-
-load_rc_config $name
-
-: ${postfix_enable="NO"}
-: ${postfix_pidfile="/var/spool/postfix/pid/master.pid"}
-: ${postfix_procname="%%PREFIX%%/libexec/postfix/master"}
+rcvar=${name}_enable
 
 start_cmd=${name}_start
 stop_cmd=${name}_stop
@@ -41,5 +35,11 @@ postfix_start() {
 postfix_stop() {
 	%%PREFIX%%/sbin/postfix stop
 }
+
+load_rc_config $name
+
+: ${postfix_enable="NO"}
+: ${postfix_pidfile="/var/spool/postfix/pid/master.pid"}
+: ${postfix_procname="%%PREFIX%%/libexec/postfix/master"}
 
 run_rc_command "$1"
