--- a/security/amavisd-milter/files/amavisd-milter.sh.in
+++ b/security/amavisd-milter/files/amavisd-milter.sh.in
@@ -1,6 +1,6 @@
 #!/bin/sh
 #
-# $FreeBSD: ports/security/amavisd-milter/files/amavisd-milter.sh.in,v 1.2 2005/11/17 20:14:49 pav Exp $
+# $FreeBSD: ports/security/amavisd-milter/files/amavisd-milter.sh.in,v 1.3 2006/01/14 11:39:52 tdb Exp $
 #
 
 # PROVIDE: amavisd-milter
@@ -23,8 +23,8 @@ load_rc_config $name
 
 # Set defaults
 : ${amavisd_milter_enable:="NO"}
-: ${amavisd_milter_flags:="-w %%AMAVISDIR%%/tmp"}
-: ${amavisd_milter_user:="%%AMAVISUSER%%"}
+: ${amavisd_milter_flags="-w %%AMAVISDIR%%/tmp"}
+: ${amavisd_milter_user="%%AMAVISUSER%%"}
 
 pidfile="${amavisd_milter_pidfile:-%%AMAVISDIR%%/amavisd-milter.pid}"
 command="%%PREFIX%%/sbin/amavisd-milter"
