--- a/graphics/gimpshop/files/patch-gimptool-2.0.in
+++ b/graphics/gimpshop/files/patch-gimptool-2.0.in
@@ -1,5 +1,5 @@
 
-$FreeBSD: ports/graphics/gimp-devel/files/patch-gimptool-2.0.in,v 1.4 2004/11/21 20:09:47 ahze Exp $
+$FreeBSD: ports/graphics/gimp/files/patch-gimptool-2.0.in,v 1.2 2004/12/24 18:39:50 pav Exp $
 
 --- gimptool-2.0.in.orig	Tue Jan 15 12:21:05 2002
 +++ gimptool-2.0.in	Fri May 17 20:46:18 2002
