--- a/devel/desktop-file-utils/files/pkg-deinstall.in
+++ b/devel/desktop-file-utils/files/pkg-deinstall.in
@@ -1,6 +1,6 @@
 #!/bin/sh
 #
-# $FreeBSD: ports/devel/desktop-file-utils/files/pkg-deinstall.in,v 1.1 2004/12/28 19:14:13 marcus Exp $
+# $FreeBSD: ports/devel/desktop-file-utils/files/pkg-deinstall.in,v 1.2 2005/01/13 07:09:24 marcus Exp $
 #
 # Remove leftover mimeinfo.cache files.
 
@@ -14,7 +14,7 @@ for mdir in %%MIMEDIRS%%; do
     fi
 done
 
-for pmdir in %%PORT_MIMEDIRS%%; do
+for pmdir in $(echo %%RMDIRS%% | sort -r); do
     rmdir ${pmdir} 2>/dev/null
 done
 
