--- a/sysutils/downtimed/files/downtimed.in
+++ b/sysutils/downtimed/files/downtimed.in
@@ -1,5 +1,5 @@
 #!/bin/sh
-# $FreeBSD$
+# $FreeBSD: ports/sysutils/downtimed/files/downtimed.in,v 1.1 2010/12/23 16:41:19 skreuzer Exp $
 
 # PROVIDE: downtimed
 # REQUIRE: LOGIN syslogd
@@ -31,6 +31,5 @@ pidfile="/var/run/${name}.pid"
 load_rc_config "$name"
 
 : ${downtimed_enable="NO"}
-: ${downtimed_flags=""}
 
 run_rc_command "$1"
