--- a/editors/openoffice.org-3/files/Makefile.others
+++ b/editors/openoffice.org-3/files/Makefile.others
@@ -1,6 +1,6 @@
 # Makefile for other stuffs
 # Whom:         Maho Nakata <maho@FreeBSD.org>
-# $FreeBSD: ports/editors/openoffice.org-3/files/Makefile.others,v 1.7 2008/10/13 10:10:20 maho Exp $
+# $FreeBSD: ports/editors/openoffice.org-3/files/Makefile.others,v 1.8 2010/02/14 04:10:44 maho Exp $
 
 #other stuffs which are not directly related to making ports
 #package-rename: rename package for uploading
@@ -16,7 +16,7 @@ package-rename:
 
 package-canonical:
 	@${ECHO_MSG} "===>   Canonical packaging for OpenOffice.org";
-	@cd ${WRKSRC}/instsetoo_native/unxfbsd?.pro/OpenOffice/bsd/install/${LOCALIZED_LANG}/freebsd-*/ ;\
+	@cd ${WRKSRC}/instsetoo_native/unxfbsd?.pro/OpenOffice/bsd/install/${LOCALIZED_LANG}/freebsd/ ;\
 	${TAR} cfj ${WRKDIR}/../${PACKAGE_BASENAME}_native_install_${LOCALIZED_LANG}${PKG_SUFX} .
 
 sdk:
@@ -48,9 +48,9 @@ solver:
 languagepack:
 	@${ECHO_MSG} "===>   Make languagepack of OpenOffice.org"
 .if defined (ALL_LOCALIZED_LANGS)
-	@cd ${WRKSRC} ; ${TCSH} -c 'source ${FREEBSD_ENV_SET} ; cd instsetoo_native/util ; dmake ooolanguagepack'
+	@cd ${WRKSRC} ; ${BASH} -c 'source ${FREEBSD_ENV_SET} ; cd instsetoo_native/util ; dmake ooolanguagepack'
 .else
-	@cd ${WRKSRC} ; ${TCSH} -c 'source ${FREEBSD_ENV_SET} ; cd instsetoo_native/util ; dmake ooolanguagepack_${LOCALIZED_LANG}'
+	@cd ${WRKSRC} ; ${BASH} -c 'source ${FREEBSD_ENV_SET} ; cd instsetoo_native/util ; dmake ooolanguagepack_${LOCALIZED_LANG}'
 .endif
 
 .if !defined (ALL_LOCALIZED_LANGS)
