--- a/print/cups-base/files/ulpt-cupsd.conf.in
+++ b/print/cups-base/files/ulpt-cupsd.conf.in
@@ -1,6 +1,6 @@
 # /usr/local/etc/devd/cups.conf
 #
-# $FreeBSD$
+# $FreeBSD: ports/print/cups-base/files/ulpt-cupsd.conf.in,v 1.1 2011/01/07 21:24:58 dinoex Exp $
 #
 # Tell cups to pause and unpause the printer when it arrives and departs.
 #
@@ -23,16 +23,16 @@ action "%%PREFIX%%/sbin/ulpt-cupsd.sh enable $device-name";
 detach 110 {
 device-name "unlpt[0-9]+";
 action "%%PREFIX%%/sbin/ulpt-cupsd.sh disable $device-name";
-}
+};
 
 detach 110 {
 device-name "ulpt[0-9]+";
 action "%%PREFIX%%/sbin/ulpt-cupsd.sh disable $device-name";
-}
+};
 
 detach 110 {
 device-name "lpt[0-9]+";
 action "%%PREFIX%%/sbin/ulpt-cupsd.sh disable $device-name";
-}
+};
 
 # eof
