--- a/editors/openoffice.org-3/files/Makefile.others
+++ b/editors/openoffice.org-3/files/Makefile.others
@@ -1,6 +1,6 @@
 # Makefile for other stuffs
 # Whom:         Maho Nakata <maho@FreeBSD.org>
-# $FreeBSD: ports/editors/openoffice.org-3/files/Makefile.others,v 1.9 2011/01/30 11:10:32 maho Exp $
+# $FreeBSD: ports/editors/openoffice.org-3/files/Makefile.others,v 1.10 2011/02/10 01:19:21 maho Exp $
 
 #other stuffs which are not directly related to making ports
 #package-rename: rename package for uploading
@@ -66,6 +66,6 @@ languagepack:
 	@cd ${WRKDIR}/langpack_tmp/opt/ ; \
 		${MKDIR} ../${INSTALLATION_BASEDIR} ; \
 		${MV} * ../${INSTALLATION_BASEDIR} ; cd .. ; \
-		${TAR} cfj ${WRKDIR}/../${PACKAGE_BASENAME}_langpack_${LOCALIZED_LANG}.tar.bz2 ${INSTALLATION_BASEDIR}
+		${TAR} cfj ${WRKDIR}/../OOo_${PACKAGE_BASENAME}_langpack_${LOCALIZED_LANG}.tbz ${INSTALLATION_BASEDIR}
 .endif
 .endif
