--- a/audio/squeezeboxserver/files/patch-modules.conf
+++ b/audio/squeezeboxserver/files/patch-modules.conf
@@ -1,5 +1,5 @@
 
-$FreeBSD$
+$FreeBSD: ports/audio/squeezeboxserver/files/patch-modules.conf,v 1.1 2010/06/24 18:38:27 brooks Exp $
 
 --- modules.conf.orig
 +++ modules.conf
@@ -7,8 +7,8 @@ $FreeBSD$
  # <module> <min_version> [ <max_version> ]
  
  AnyEvent 5.202
--Audio::Scan 0.82 0.82
-+Audio::Scan 0.82
+-Audio::Scan 0.84 0.84
++Audio::Scan 0.84
  Cache::Cache 1.04
  CGI::Cookie 1.27
  Class::Data::Inheritable 0.04
