--- a/multimedia/gstreamer-plugins/Makefile.common
+++ b/multimedia/gstreamer-plugins/Makefile.common
@@ -1,4 +1,4 @@
-# $FreeBSD: ports/multimedia/gstreamer-plugins/Makefile.common,v 1.118 2010/11/15 16:38:24 kwm Exp $
+# $FreeBSD: ports/multimedia/gstreamer-plugins/Makefile.common,v 1.119 2010/12/01 00:13:30 kwm Exp $
 #    $MCom: ports/multimedia/gstreamer-plugins/Makefile.common,v 1.81 2010/03/16 19:33:10 mezz Exp $
 # base
 BASE_GST_ALL_PLUGINS= \
@@ -49,6 +49,7 @@ BAD_GST_ALL_PLUGINS+= \
 		nas \
 		neon \
 		ofa \
+		opencv \
 		resindvd \
 		rsvg \
 		schro \
@@ -336,7 +337,7 @@ gst_hal_PLIST_FILES=	${GST_LIB_DIR}/libgsthalelements.la \
 gst_jack_LIB_DEPENDS+=	jack.0:${PORTSDIR}/audio/jack
 gst_jack_PLIST_FILES=	${GST_LIB_DIR}/libgstjack.la \
 		${GST_LIB_DIR}/libgstjack.so
-gst_jack_DIST=	bad
+gst_jack_DIST=	good
 
 # jpeg
 gst_jpeg_LIB_DEPENDS+=	jpeg.11:${PORTSDIR}/graphics/jpeg
@@ -428,6 +429,14 @@ gst_ogg_EXTRA_LIBS+=	-lgstriff-${VERSION}
 gst_ogg_PLIST_FILES=	${GST_LIB_DIR}/libgstogg.la \
 		${GST_LIB_DIR}/libgstogg.so
 gst_ogg_DIST=	base
+
+# opencv
+gst_opencv_BUILD_DEPENDS+=opencv<=2.1:${PORTSDIR}/graphics/opencv
+gst_opencv_RUN_DEPENDS+=opencv<=2.1:${PORTSDIR}/graphics/opencv
+gst_opencv_PLIST_FILES= ${GST_LIB_DIR}/libgstopencv.la \
+			${GST_LIB_DIR}/libgstopencv.a \
+			${GST_LIB_DIR}/libgstopencv.so
+gst_opencv_DIST=	bad
 
 # pango
 gst_pango_USE_GNOME+=	pango
