--- a/mail/rspamd/files/rspamd.in
+++ b/mail/rspamd/files/rspamd.in
@@ -1,6 +1,6 @@
 #!/bin/sh
 #
-# $FreeBSD: ports/mail/rspamd/files/rspamd.in,v 1.1 2011/02/07 16:53:04 vsevolod Exp $
+# $FreeBSD: ports/mail/rspamd/files/rspamd.in,v 1.2 2011/02/25 16:07:57 vsevolod Exp $
 #
 # PROVIDE: rspamd
 # REQUIRE: LOGIN
@@ -53,7 +53,7 @@ reopenlog_cmd()
 
 sig_reload="HUP"
 
-command_args="-u ${rspamd_user} -g ${rspamd_group} ${rspamd_flags}"
+command_args="-u ${rspamd_user} -g ${rspamd_group}"
 
 extra_commands="reload configtest reopenlog"
 run_rc_command "$1"
