--- a/devel/pcsc-lite/files/pcscd.in
+++ b/devel/pcsc-lite/files/pcscd.in
@@ -1,6 +1,6 @@
 #!/bin/sh
 #
-# $FreeBSD: ports/devel/pcsc-lite/files/pcscd.in,v 1.1 2007/01/22 16:56:16 arved Exp $
+# $FreeBSD: ports/devel/pcsc-lite/files/pcscd.in,v 1.2 2010/03/27 00:12:53 dougb Exp $
 #
 # PROVIDE:	pcscd
 # REQUIRE:	LOGIN
@@ -17,4 +17,7 @@ rcvar="pcscd_enable"
 command="%%PREFIX%%/sbin/pcscd"
 
 load_rc_config "$name"
+
+: ${pcscd_enable="NO"}
+
 run_rc_command "$1"
