--- a/net-p2p/transmission-cli/files/transmission.in
+++ b/net-p2p/transmission-cli/files/transmission.in
@@ -1,6 +1,6 @@
 #!/bin/sh
 #
-# $FreeBSD: ports/net-p2p/transmission-cli/files/transmission.in,v 1.2 2009/06/19 21:29:15 mezz Exp $
+# $FreeBSD: ports/net-p2p/transmission-cli/files/transmission.in,v 1.3 2010/03/27 00:14:31 dougb Exp $
 #
 # PROVIDE: transmission
 # REQUIRE: DAEMON 
@@ -33,8 +33,8 @@ load_rc_config ${name}
 
 : ${transmission_enable:="NO"}
 : ${transmission_user:="transmission"}
-: ${transmission_conf_dir:="%%PREFIX%%/etc/transmission/home"}
-: ${transmission_download_dir:="%%PREFIX%%/etc/transmission/home/Downloads"}
+: ${transmission_conf_dir="%%PREFIX%%/etc/transmission/home"}
+: ${transmission_download_dir="%%PREFIX%%/etc/transmission/home/Downloads"}
 
 transmission_flags=" \
 	${transmission_watch_dir:+-c ${transmission_watch_dir}} \
