--- a/print/enscript-a4/Makefile
+++ b/print/enscript-a4/Makefile
@@ -2,10 +2,14 @@
 # Date created:			24 Jul, 1997
 # Whom:				kline
 #
-# $FreeBSD: ports/print/enscript-a4/Makefile,v 1.2 1999/08/31 01:44:42 peter Exp $
+# $FreeBSD$
 #
 
+CONFLICTS=	enscript-letter-* enscript-letterdj-*
+
 PAPERSIZE=	a4
+PS=		A4
+
 MASTERDIR=	${.CURDIR}/../enscript-letter
 
 .include "${MASTERDIR}/Makefile"
