--- a/lang/erlang/Makefile.man
+++ b/lang/erlang/Makefile.man
@@ -1,4 +1,4 @@
-# $FreeBSD: ports/lang/erlang/Makefile.man,v 1.23 2010/09/27 20:17:15 olgeni Exp $
+# $FreeBSD: ports/lang/erlang/Makefile.man,v 1.24 2010/12/15 13:52:59 olgeni Exp $
 
 MAN1=	ct_run.1 \
 	epmd.1 \
@@ -8,6 +8,7 @@ MAN1=	ct_run.1 \
 	erlsrv.1 \
 	escript.1 \
 	run_erl.1 \
+	snmpc.1 \
 	start.1 \
 	start_erl.1 \
 	start_webtool.1 \
@@ -111,6 +112,7 @@ MAN3=	CosEventChannelAdmin.3 \
 	ct.3 \
 	ct_cover.3 \
 	ct_ftp.3 \
+	ct_hooks.3 \
 	ct_master.3 \
 	ct_rpc.3 \
 	ct_slave.3 \
