--- a/devel/viewvc/files/viewvc.in
+++ b/devel/viewvc/files/viewvc.in
@@ -1,6 +1,6 @@
 #!/bin/sh
 
-# $FreeBSD: ports/devel/viewvc/files/viewvc.in,v 1.4 2010/07/07 18:03:21 glarkin Exp $
+# $FreeBSD: ports/devel/viewvc/files/viewvc.in,v 1.5 2010/07/27 15:08:09 glarkin Exp $
 #
 # PROVIDE: viewvc
 # REQUIRE: LOGIN
@@ -24,8 +24,7 @@
 # adjust the parameter viewvc_user and it should work.
 #
 # INFO:
-# The default port will change with the next release of ViewVC
-# from 7467 to 49152
+# ViewVC default tcp port: 49152
 # see http://viewvc.tigris.org/issues/show_bug.cgi?id=234
 
 . /etc/rc.subr
