--- a/sysutils/monitorix/files/monitorix.in
+++ b/sysutils/monitorix/files/monitorix.in
@@ -1,6 +1,6 @@
 #!/bin/sh
 #
-# $FreeBSD$
+# $FreeBSD: ports/sysutils/monitorix/files/monitorix.in,v 1.2 2011/03/28 02:45:01 wen Exp $
 #
 # PROVIDE: monitorix
 # REQUIRE: DAEMON
@@ -20,7 +20,7 @@ start_cmd="${name}_start"
 
 pidfile="/var/run/${name}.pid"
 command_interpreter="."
-procname="/usr/local/sbin/${name}"
+procname="%%PREFIX%%/sbin/${name}"
 
 monitorix_start()
 {
