--- a/audio/mt-daapd/files/mt-daapd.in
+++ b/audio/mt-daapd/files/mt-daapd.in
@@ -1,7 +1,6 @@
 #!/bin/sh
 #
-# $FreeBSD: ports/audio/mt-daapd/files/mt-daapd.sh.in,v 1.1 2006/06/25 13:17:25 itetcu Exp $
-# formerly $ FreeBSD: ports/audio/mt-daapd/files/mt-daapd.sh,v 1.1 2004/07/19 09:18:51 edwin Exp $
+# $FreeBSD: ports/audio/mt-daapd/files/mt-daapd.sh.in,v 1.2 2010/03/27 00:12:42 dougb Exp $
 
 # PROVIDE: mt-daapd
 # REQUIRE: LOGIN
@@ -15,7 +14,7 @@ command="%%PREFIX%%/sbin/mt-daapd"
 command_args="-c %%PREFIX%%/etc/mt-daapd.conf"
 pidfile="/var/run/mt-daapd.pid"
 required_dirs="%%DAAPD_DBDIR%%"
-required_files="%%PREFIX%%/etc/mt-daapd.conf.sample"
+required_files="%%PREFIX%%/etc/mt-daapd.conf"
 
 load_rc_config "$name"
 run_rc_command "$1"
